--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>suGEST ALTernatives</title>
 	<style>
 	.center {
-		width: 200px;
+		width: 600px;
 		height: 10px;
 
 		position: absolute;
@@ -13,6 +13,8 @@
 		left: 0;
 		right: 0;
 		
+		font-size: 36pt;
+		font-family: OCR A Std, monospace;
 		margin: auto
 	}
 	</style>
